fix: grid-template-columns on tablet

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -374,7 +374,7 @@ a:hover {
 }
 @media (min-width: 600px) {
   .dashboard-grid {
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
   }
 }
 @media (min-width: 1024px) {
